--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   bloc: ^9.0.0
   qr_code_scanner_plus: ^2.0.10+1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
