--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bloc: ^9.0.0
   qr_code_scanner_plus: ^2.0.10+1
   http: ^1.3.0
+  flutter_secure_storage: any
 
 dev_dependencies:
   flutter_test:
