--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   qr_code_scanner_plus: ^2.0.10+1
   http: ^1.3.0
   flutter_secure_storage: any
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
