--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.3.0
   flutter_secure_storage: any
   provider: ^6.1.2
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
